--- a/config.json
+++ b/config.json
@@ -14,6 +14,10 @@
   "dependencies" : {
     "python-dotenv" : ">=0.17.1",
     "discord" : ">=1.0.1",
-    "requests" : ">=2.25.1"
+    "requests" : ">=2.25.1",
+	"ffmpeg" : ">=1.4",
+	"ffmpeg-python" : ">=0.2.0",
+	"PyNaCl" : ">=1.4.0",
+	"youtube-dl" : ">=2021.6.6"
   }
 }
